fix: little bugs

--- a/src/DesafioDiaDoRock.UI/wwwroot/index.html
+++ b/src/DesafioDiaDoRock.UI/wwwroot/index.html
@@ -44,7 +44,8 @@
             flatpickr("#date", {
                 enableTime: true,
                 dateFormat: "Y-m-d H:i",
-                time_24hr: true
+                time_24hr: true,
+
             });
         }
     </script>    
